--- a/wub/supekku.slim
+++ b/wub/supekku.slim
@@ -24,11 +24,11 @@ body [data-theme="light"]
   nav
     ul
       li
-        a.contrast href="#" home
+        a.contrast href="https://davidlee.github.io/spec-driver/" docs
       li
-        a.contrast href="#" about
+        a.contrast href="https://pypi.org/project/spec-driver/" install
       li
-        a.contrast href="#" github
+        a.contrast href="https://github.com/davidlee/spec-driver" github
 
   main.container-fluid
     article
